// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrialStatusPopover component group_contact_sales experiment candidate matches the snapshot 1`] = `
<gl-popover-stub
  boundary="viewport"
  cssclasses=""
  delay="[object Object]"
  placement="rightbottom"
  target="target-element-identifier"
>
   
  <gl-sprintf-stub
    message="Your trial ends on %{boldStart}%{trialEndDate}%{boldEnd}. We hope you’re enjoying the features of GitLab %{planName}. To keep those features after your trial ends, you’ll need to buy a subscription. (You can also choose GitLab Premium if it meets your needs.)"
  />
   
  <div
    class="gl-mt-5"
  >
    <div
      data-testid="contact-sales-btn"
    >
      <div
        class="js-hand-raise-lead-button"
        data-button-attributes="{\\"size\\":\\"small\\",\\"variant\\":\\"confirm\\",\\"class\\":\\"gl-mb-3 gl-w-full\\",\\"buttonTextClasses\\":\\"gl-font-sm\\",\\"href\\":\\"#\\"}"
        data-company-name="companyName"
        data-first-name="firstName"
        data-glm-content="glmContent"
        data-last-name="lastName"
        data-namespace-id="namespaceId"
        data-user-name="userName"
      />
    </div>
     
    <gl-button-stub
      block="true"
      buttontextclasses=""
      category="secondary"
      class="gl-mb-0"
      data-testid="compare-btn"
      href="billing/path-for/group"
      icon=""
      size="small"
      title="Compare all plans"
      variant="confirm"
    >
      <span
        class="gl-font-sm"
      >
        Compare all plans
      </span>
    </gl-button-stub>
  </div>
</gl-popover-stub>
`;

exports[`TrialStatusPopover component group_contact_sales experiment control matches the snapshot 1`] = `
<gl-popover-stub
  boundary="viewport"
  cssclasses=""
  delay="[object Object]"
  placement="rightbottom"
  target="target-element-identifier"
>
   
  <gl-sprintf-stub
    message="Your trial ends on %{boldStart}%{trialEndDate}%{boldEnd}. We hope you’re enjoying the features of GitLab %{planName}. To keep those features after your trial ends, you’ll need to buy a subscription. (You can also choose GitLab Premium if it meets your needs.)"
  />
   
  <div
    class="gl-mt-5"
  >
    <gl-button-stub
      block="true"
      buttontextclasses=""
      category="primary"
      class="gl-mb-0"
      data-testid="upgrade-btn"
      href="transactions/new"
      icon=""
      size="small"
      variant="confirm"
    >
      <span
        class="gl-font-sm"
      >
        Upgrade Some Test Group to Ultimate
      </span>
    </gl-button-stub>
     
    <gl-button-stub
      block="true"
      buttontextclasses=""
      category="secondary"
      class="gl-mb-0"
      data-testid="compare-btn"
      href="billing/path-for/group"
      icon=""
      size="small"
      title="Compare all plans"
      variant="confirm"
    >
      <span
        class="gl-font-sm"
      >
        Compare all plans
      </span>
    </gl-button-stub>
  </div>
</gl-popover-stub>
`;
